--- a/set_aws_usr_passwd.yml
+++ b/set_aws_usr_passwd.yml
@@ -1,20 +1,25 @@
 ---
 # Quick and dirty way of setting a passed in username/password across multiple 
-# servers. Use  --extra-vars "usr=USER host=HOST" when calling the playbook.
-# host can match an ansible hostname or group
+# servers. Use  --extra-vars "usr=USER pattern=KEY_NAME" when calling the playbook.
+# 
 # Prior to using, insert hash value of desired password in appropriate location
 # generate hash (after installing passlib) by using the command below:
 # python -c "from passlib.hash import sha512_crypt; import getpass; print sha512_crypt.encrypt(getpass.getpass())"
 #
 # To fully automate, package this into a role
-- hosts: 
-    - "{{ host }}"
-
+- hosts: all
+  gather_facts: False
+  tasks:
+    - name: Generate Dynamic Groups based upon the instance KEY_NAMEs
+      group_by: 
+         key: "{{ ec2_key_name }}"
+      
+- hosts: "{{ pattern | default('all') }}"
   tasks:
     - name: Ensure user exist with particular password
       user:
-	    name: "{{ usr }}"
-	    state: present 
-	    update_password: always 
-	    password: '<hash value of passwd>'
-	    shell: /bin/bash
+        name: "{{ usr }}"
+        state: present 
+        update_password: always 
+        password: '<hash value of passwd>'
+        shell: /bin/bash
