--- a/site.yml
+++ b/site.yml
@@ -1,20 +1,2 @@
 ---
-- hosts: all
-  gather_facts: False
-  tasks:
-      - name: Generate Dynamic Groups based upon the instance KEY_NAMEs
-        group_by: 
-           key: "{{ ec2_key_name }}"
-      
-- hosts: "{{ pattern | default('all') }}"
-  tasks:
-    - name: Gather facts from Remote hosts
-      ec2_facts:
-        validate_certs: no
-      register: ec2Facts
-      
-    - name: Display Debug Message when Verbosity is set to 2 
-      debug:
-        var: ec2Facts
-        verbosity: 2
-      
+- include: change_aws_usr_passwds
