--- a/site.yml
+++ b/site.yml
@@ -1,11 +1,2 @@
 ---
-- hosts: all
-  gather_facts: False
-  tasks:
-      - name: Generate Dynamic Groups based upon the instance KEY_NAMEs
-        group_by:
-           key: "{{ ec2_key_name }}"
-
-- hosts: "{{ pattern | default('all') }}"
-  roles: 
-    - role: change_aws_usr_passwds
+- include: set_aws_usr_passwd.yml
