--- a/display_aws_facts.yml
+++ b/display_aws_facts.yml
@@ -5,11 +5,11 @@
     # gathers facts and registers the output as `ec2_facts`
     - name: Gather EC2 facts.
       ec2_remote_facts:
-        region: "{{ region | default(us-west-2) }}"
+        region: "us-west-2"
       register: ec2_facts
 
     # debug that output
     - name: Display Debug Message when Verbosity is set to 2
       debug:
-        msg: "{{ aws_ec2_facts }}"
+        var: "{{ ec2_facts }}"
         verbosity: 2
