--- a/get_aws_facts.yml
+++ b/get_aws_facts.yml
@@ -3,18 +3,10 @@
   gather_facts: False
   tasks:
       - name: Generate Dynamic Groups based upon the instance KEY_NAMEs
-        group_by: 
+        group_by:
            key: "{{ ec2_key_name }}"
-      
+
 - hosts: "{{ pattern | default('all') }}"
-  tasks:
-    - name: Gather facts from Remote hosts
-      ec2_facts:
-        validate_certs: no
-      register: ec2Facts
-      
-    - name: Display Debug Message when Verbosity is set to 2 
-      debug:
-        var: ec2Facts
-        verbosity: 2
-      
+  gather_facts: False
+  roles: 
+    - role: get_aws_facts
