--- a/roles/provision-ec2/tasks/main.yml
+++ b/roles/provision-ec2/tasks/main.yml
@@ -6,7 +6,7 @@
      group: "{{ security_group }}"
      instance_type: "{{ instance_type }}"
      image: "{{ image }}"
-     vpc_subnet_id: "{{ ec2_subnet_ids|random }}"
+     vpc_subnet_id: "{{ subnet_ids|random }}"
      region: "{{ region }}"
      instance_tags: '{"Name":"{{tag_Name}}","Type":"{{tag_Type}}","Environment":"{{tag_Environment}}"}'
      assign_public_ip: yes
@@ -24,11 +24,11 @@
 
  - add_host: name={{ item.public_ip }} >
              groups=tag_Type_{{tag_Type}},tag_Environment_{{tag_Environment}}
-             ec2_region={{region}} 
-             ec2_tag_Name={{tag_Name}}
-             ec2_tag_Type={{tag_Type}}
-             ec2_tag_Environment={{ag_Environment}}
-             ec2_ip_address={{item.public_ip}}
+             region={{region}} 
+             tag_Name={{tag_Name}}
+             tag_Type={{tag_Type}}
+             tag_Environment={{ag_Environment}}
+             ip_address={{item.public_ip}}
    with_items: ec2.instances
 
  - name: Wait for the instances to boot by checking the ssh port
