--- a/roles/provision-ec2/tasks/main.yml
+++ b/roles/provision-ec2/tasks/main.yml
@@ -22,15 +22,20 @@
  - debug: var=item
    with_items: ec2.instances
 
- - add_host: name={{ item.public_ip }} >
-             groups=tag_Type_{{tag_Type}},tag_Environment_{{tag_Environment}}
-             region={{region}} 
-             tag_Name={{tag_Name}}
-             tag_Type={{tag_Type}}
-             tag_Environment={{ag_Environment}}
-             ip_address={{item.public_ip}}
+ - add_host: 
+     name: {{ item.public_ip }}
+     groups: tag_Type_{{tag_Type}},tag_Environment_{{tag_Environment}}
+     region: {{region}} 
+     tag_Name: {{tag_Name}}
+     tag_Type: {{tag_Type}}
+     tag_Environment: {{ag_Environment}}
+     ip_address: {{item.public_ip}}
    with_items: ec2.instances
 
  - name: Wait for the instances to boot by checking the ssh port
-   wait_for: host={{item.public_ip}} port=22 delay=60 timeout=320 state=started
+   wait_for: 
+     host:{{item.public_ip}} 
+     port:22 
+     delay:60 
+     timeout=320 state=started
    with_items: ec2.instances
