--- a/roles/provision-ec2/tasks/main.yml
+++ b/roles/provision-ec2/tasks/main.yml
@@ -22,7 +22,8 @@
  - debug: var=item
    with_items: ec2.instances
 
- - add_host: 
+ - name: Add Host (prior to waiting for it to start
+   add_host: 
      name: "{{ item.public_ip }}"
      groups: tag_Type_{{ tag_Type }},tag_Environment_{{ tag_Environment }}
      region: "{{ region }}" 
@@ -35,7 +36,8 @@
  - name: Wait for the instances to boot by checking the ssh port
    wait_for: 
      host: "{{ item.public_ip }}"
-     port:22 
-     delay:60 
-     timeout=320 state=started
+     port: 22 
+     delay: 60 
+     timeout: 320 
+     state: started
    with_items: ec2.instances
