--- a/roles/provision-ec2/tasks/main.yml
+++ b/roles/provision-ec2/tasks/main.yml
@@ -19,19 +19,20 @@
 #       delete_on_termination: true
    register: ec2
 
- - debug: var=item
+ - debug: 
+     var: item
    with_items: ec2.instances
 
- - name: Add Host (prior to waiting for it to start
-   add_host: 
-     name: "{{ item.public_ip }}"
-     groups: tag_Type_{{ tag_Type }},tag_Environment_{{ tag_Environment }}
-     region: "{{ region }}" 
-     tag_Name: "{{tag_Name}}"
-     tag_Type: "{{tag_Type}}"
-     tag_Environment: "{{ tag_Environment }}"
-     ip_address: "{{ item.public_ip }}"
-   with_items: ec2.instances
+# - name: Add Host (prior to waiting for it to start
+#   add_host: 
+#     name: "{{ item.public_ip }}"
+#     groups: tag_Type_{{ tag_Type }},tag_Environment_{{ tag_Environment }}
+#     region: "{{ region }}" 
+#     tag_Name: "{{tag_Name}}"
+#     tag_Type: "{{tag_Type}}"
+#     tag_Environment: "{{ tag_Environment }}"
+#     ip_address: "{{ item.public_ip }}"
+#   with_items: ec2.instances
 
  - name: Wait for the instances to boot by checking the ssh port
    wait_for: 
