--- a/roles/provision-ec2/tasks/main.yml
+++ b/roles/provision-ec2/tasks/main.yml
@@ -21,9 +21,9 @@
 
  - debug: 
      var: item
-   with_items: ec2.instances
+   with_items: "{{ ec2.instances }}"
 
- - name: Add Host (prior to waiting for it to start
+ - name: Add Host (prior to waiting for it to start)
    add_host: 
      name: "{{ item.public_ip }}"
      groups: tag_Type_{{ tag_Type }},tag_Environment_{{ tag_Environment }}
@@ -32,7 +32,7 @@
      ec2_tag_Type: "{{ tag_Type }}"
      ec2_tag_Environment: "{{ tag_Environment }}"
      ec2_ip_address: "{{ item.public_ip }}"
-   with_items: ec2.instances
+   with_items: "{{ ec2.instances }}"
 
  - name: Wait for the instances to boot by checking the ssh port
    wait_for: 
@@ -41,4 +41,4 @@
      delay: 60 
      timeout: 320 
      state: started
-   with_items: ec2.instances
+   with_items: "{{ ec2.instances }}"
